--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ section {
   background: url(portfolio-banner.jpg);
   background-color: #0a0e11;
   background-size: contain;
-  background-position: 75% 25%;
+  background-position: 80% 20%;
   background-repeat: no-repeat;
   display: flex;
   justify-content: space-between;
@@ -55,4 +55,43 @@ section {
   letter-spacing: 2px;
   font-weight: 500;
   border-radius: 5px;
+}
+
+header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  padding: 40px 100px;
+  width: 100%;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .logo {
+  color: #fff;
+  font-size: 24px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+header ul {
+  position: relative;
+  display: flex;
+}
+
+header ul li {
+  position: relative;
+  list-style: none;
+}
+
+header ul li a {
+  position: relative;
+  display: inline-block;
+  margin: 0 15px;
+  color: #fff;
+  text-decoration: none;
 }
