--- a/style.css
+++ b/style.css
@@ -95,3 +95,34 @@ header ul li a {
   color: #fff;
   text-decoration: none;
 }
+
+.heading {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #111;
+}
+
+.heading h2 {
+  font-weight: 600;
+  font-size: 30px;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contentBx h3 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.img {
+  max-width: 100%;
+  height: 300px;
+}
+
+.w50 {
+  min-width: 50%;
+}
