--- a/main.css
+++ b/main.css
@@ -34,6 +34,59 @@ img{
 /*End global*/
 
 /*Start reusable*/
+.container{
+  width: 90%;
+  max-width: 120rem;
+  height: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.section-heading{
+  text-align: center;
+  margin-top: 10rem;
+}
+
+.section-heading h1{
+  font-size: 3.5rem;
+  color: rgba(255, 255, 255, .3);
+  text-transform: uppercase;
+  font-weight: 300;
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.section-heading h1::before,
+.section-heading h1::after{
+  content: '';
+  position: absolute;
+  bottom: -.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.section-heading h1::before{
+  width: 10rem;
+  height: 3px;
+  border-radius: .8rem;
+}
+
+.section-heading h1::after{
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 100%;
+  bottom: -1rem;
+}
+
+.section-heading h6{
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+
+.has-margin-right{
+  margin-right: 5rem;
+}
 /*End reusable*/
 
 /*Start header*/
@@ -131,15 +184,161 @@ li{
 .open .bar.end{
   transform: rotate(-450deg) translateX(-.8rem);
 }
+
+.landing-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+}
+
+.landing-text h1{
+  font-size: 20rem;
+  font-family: 'The Historia Demo', sans-serif;
+  background: linear-gradient(to top, #ffe838, #fd57bf);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding: 1rem;
+  user-select: none;
+}
+
+.landing-text h6{
+  font-size: 2rem;
+  font-weight: 300;
+}
 /*End header*/
 
 /*Start about*/
+.about .container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-heading{
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 0;
+  margin-bottom: 6rem;
+}
+
+.about-heading h1{
+  font-size: 10rem;
+  opacity: .3;
+}
+
+.about-heading h6{
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+.profile-img{
+  flex: 1;
+  margin-right: 5rem;
+}
+
+.profile-img img{
+  border-radius: 30px;
+  width: 40rem;
+}
+
+.about-details{
+  flex: 1;
+}
+
+.social-media{
+  margin-top: 5rem;
+}
+
+.social-media i{
+  font-size: 5rem;
+  transition: color 650ms;
+}
+
+.fa-github-square:hover{
+  color: #4267b2;
+}
+
+.fa-linkedin-in:hover{
+  color: #38a1f3;
+}
+
+.fa-instagram:hover{
+  color: #ea4c89;
+}
 /*End about*/
 
 /*Start services*/
+.my-skills{
+  margin-top: 10rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 2.5rem;
+  text-align: center;  
+}
+
+.skill{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+.skill h1{
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 2rem -2px 2rem 0;
+}
+
+.icon-container{
+  width: 10rem;
+  height: 10rem;
+  border: 3px solid #272121;
+  background-color: #c2e8ce;
+  margin-bottom: 2rem;
+  display: flex;
+  transform: rotate(45deg);
+}
+
+.icon-container i{
+  color: #272121;
+  font-size: 5rem;
+  margin: auto;
+  transform: rotate(-45deg);
+}
 /*End services*/
 
 /*Start portfolio*/
+.portfolio-item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5rem;
+}
+
+.portfolio-item:last-child{
+  margin-bottom: 0;
+}
+
+.portfolio-img{
+  width: 50rem;
+  flex: 1;
+}
+
+.portfolio-description{
+  flex: 1;
+}
+
+.portfolio-description h6{
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  opacity: 0.3;
+}
 /*End services*/
 
 /*Start timeline*/
