--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body{
 }
 
 section{
-  padding: 6rem;
+  padding: 6rem 0;
 }
 
 a{
@@ -509,6 +509,7 @@ input[type="submit"]:hover{
   border-radius: 100%;  
   display: flex;
   animation: pulse 2s infinite;
+  cursor: pointer;
 }
 
 .up i{
@@ -542,5 +543,10 @@ input[type="submit"]:hover{
 
 
 /*Start media queries*/
+/* @media screen and (max-width: 768px) {
+body{
+  background: url("images/sitebg.jpg") no-repeat center fixed;
+  background-size: cover;
+} */
 
-/*End media queries*/
+/* End media queries */
