--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ header{
   height: 100vh;
   position: fixed;
   top: -100vh;
-  background-color: #16162d;
+  background-color: #1a2521;
   border-bottom-right-radius: 100%;
   border-bottom-left-radius: 100%;
   transition: all 650ms cubic-bezier(1, 0, 0, 1);
@@ -543,10 +543,11 @@ input[type="submit"]:hover{
 
 
 /*Start media queries*/
-/* @media screen and (max-width: 768px) {
+
+@media screen and (max-width: 768px) {
 body{
-  background: url("images/sitebg.jpg") no-repeat center fixed;
+  background: url("images/sitebg1.jpg") no-repeat center fixed;
   background-size: cover;
-} */
+}
 
 /* End media queries */
