--- a/main.css
+++ b/main.css
@@ -546,7 +546,7 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 768px) {
   body{
-    background: url("images/sitebg2.jpg") no-repeat center fixed;
+    background: url("images/sitebg.jpg") no-repeat center fixed;
     background-size: cover;
   }
 
