--- a/main.css
+++ b/main.css
@@ -488,8 +488,8 @@ textarea{
 
 input[type="submit"]{
   width: initial;
-  background-color: #f5b553;
-  color: #221e3f;
+  background-color: #c56868;
+  color: #272121;
   padding: 1rem 2rem;
   border-radius: 1rem;
   cursor: pointer;
@@ -497,8 +497,8 @@ input[type="submit"]{
 }
 
 input[type="submit"]:hover{
+  background-color: #f5b553;
   color: #eee;
-  background-color: #c56868;  
 }
 
 /*End contact*/
