--- a/style.css
+++ b/style.css
@@ -275,6 +275,16 @@ li {
   width: 40rem;
 }
 
+.itcerts-img {
+  flex: 1;
+  margin-right: 5rem;
+}
+
+.itcerts-img img {
+  border-radius: 30px;
+  width: 40rem;
+}
+
 .about-details {
   flex: 1;
 }
