--- a/style.css
+++ b/style.css
@@ -313,6 +313,14 @@ li {
   text-align: center;  
 }
 
+.my-certs {
+  margin-top: 10rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 2.5rem;
+  text-align: center;  
+}
+
 .skill {
   display: flex;
   flex-direction: column;
